--- a/app/views/default/home/index.html
+++ b/app/views/default/home/index.html
@@ -216,7 +216,7 @@
             </div>
         </div>
         <?php $delay_card = 0.2; ?>
-        <div class="row" id="list-bantuan-row" data-delay="<?= $delay_card; ?>" <?=(isset($data['list_id'])
+        <div class="row gap-services" id="list-bantuan-row" data-delay="<?= $delay_card; ?>" <?=(isset($data['list_id'])
             ? ' data-list-id="' . $data['list_id'] . '"' : '' );?>>
             <?php 
             if (!is_null($data['list_bantuan']['data'])) {
