--- a/app/views/default.html
+++ b/app/views/default.html
@@ -3,11 +3,11 @@
 
 <head>
     <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-N6827P35');</script>
+    })(window,document,'script','dataLayer','GTM-N6827P35');</script> -->
     <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="/assets/route/default/core/css/LineIcons.3.0.css">
     <link rel="stylesheet" href="/assets/route/default/core/css/animate.css">
     <link rel="stylesheet" href="/assets/route/default/core/css/main.css?v=171123">
-    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=220124">
+    <link rel="stylesheet" href="/assets/route/default/core/css/default.css?v=110824">
     <?= $this->getLinkRel('controller'); ?>
     <?= $this->getLinkRel('action'); ?>
     <link rel="manifest" href="/manifest.json">
@@ -114,6 +114,9 @@
                                             </li>
                                             <li class="nav-item"><a href="/bantuan/rescue">Pojok Rescue</a></li>
                                         </ul>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="/publikasi/artikel" aria-label="Toggle navigation">Artikel</a>
                                     </li>
                                     <!-- <li class="nav-item">
                                         <a href="blog.pojokberbagi.id" aria-label="Toggle navigation">Blog</a>
@@ -235,7 +238,7 @@
     <script src="/assets/route/default/core/js/wow.min.js"></script>
     <script src="/assets/route/default/core/js/main.js"></script>
     <!-- Core Script -->
-    <script src="/assets/route/default/core/js/default.js?v=171123"></script>
+    <script src="/assets/route/default/core/js/default.js?v=110824"></script>
     <script src="/assets/route/auth/js/auth.js?v=071224"></script>
     <?= $this->getScript('controller'); ?>
     <?= $this->getScript('action'); ?>
