--- a/app/views/admin/rab/index.html
+++ b/app/views/admin/rab/index.html
@@ -845,7 +845,7 @@
                 </div>
                 <div class="row my-4">
                     <div class="col">
-                        <table class="table table-hover list-rab table-absolute-first table-borderless">
+                        <table class="table table-hover list-rab table-responsive table-absolute-first table-borderless">
                             <thead class="thead-light">
                                 <tr>
                                     <th class="fit">Kebutuhan</th>
